[gd_scene load_steps=13 format=3 uid="uid://lriwvcvdpc6v"]

[ext_resource type="Texture2D" uid="uid://s83esl83rtp0" path="res://addons/Tiny Swords (Update 010)/UI/Ribbon_Red_3Slides.png" id="1_7p6vf"]
[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_xkovf"]
[ext_resource type="Texture2D" uid="uid://dmv43oqy5yep5" path="res://addons/Tiny Swords (Update 010)/UI/Banners/Banner_Vertical.png" id="2_vnq13"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xmcob"]
texture = ExtResource("1_7p6vf")
texture_margin_left = 61.0
texture_margin_right = 61.0
axis_stretch_horizontal = 2
region_rect = Rect2(3, 0, 186, 61)

[sub_resource type="SystemFont" id="SystemFont_fbmgc"]
font_names = PackedStringArray("Almendra")

[sub_resource type="LabelSettings" id="LabelSettings_dfhdl"]
font = SubResource("SystemFont_fbmgc")
font_size = 48
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_offset = Vector2(2.98, 1.81)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iubno"]
texture = ExtResource("2_vnq13")
texture_margin_left = 23.0
texture_margin_top = 34.0
texture_margin_right = 23.0
texture_margin_bottom = 31.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(36, 31, 120, 131)

[sub_resource type="LabelSettings" id="LabelSettings_6252l"]
font = SubResource("SystemFont_fbmgc")
font_size = 40
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_offset = Vector2(2.98, 1.81)

[sub_resource type="LabelSettings" id="LabelSettings_6v25s"]
font = SubResource("SystemFont_fbmgc")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_offset = Vector2(2.98, 1.81)

[sub_resource type="Animation" id="Animation_4grnu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BG:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(426, 202)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../TopPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 32)]
}

[sub_resource type="Animation" id="Animation_oe5vx"]
resource_name = "default"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BG:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.03, 0.03, 0.03, 0.992157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6, 2),
"transitions": PackedFloat32Array(1, 0.392292, 0.392292),
"update": 0,
"values": [Vector2(-150, 449), Vector2(-150, -125), Vector2(-150, -94)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../TopPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6, 2),
"transitions": PackedFloat32Array(1, 0.392292, 0.378929),
"update": 0,
"values": [Vector2(-256, -581), Vector2(-256, -217), Vector2(-256, -267)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bh5hf"]
_data = {
"RESET": SubResource("Animation_4grnu"),
"default": SubResource("Animation_oe5vx")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_xkovf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TopPanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 32.0
offset_right = 832.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xmcob")

[node name="GameOverLabel" type="Label" parent="Control/TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -41.0
offset_right = 206.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_dfhdl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 426.0
offset_top = 202.0
offset_right = 726.0
offset_bottom = 548.047
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_iubno")

[node name="Statistics" type="Label" parent="Control/BottomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.132
anchor_right = 0.5
anchor_bottom = 0.132
offset_left = -206.5
offset_top = -31.672
offset_right = 206.5
offset_bottom = 31.328
grow_horizontal = 2
grow_vertical = 2
text = "Statistics:"
label_settings = SubResource("LabelSettings_6252l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/BottomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.083
anchor_top = 0.5
anchor_right = 0.083
anchor_bottom = 0.5
offset_left = 5.1
offset_top = -99.0205
offset_right = 166.1
offset_bottom = 100.979
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Control/BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="TimeSurvivedLabel" type="Label" parent="Control/BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time Survived:"
label_settings = SubResource("LabelSettings_6v25s")
vertical_alignment = 1

[node name="GoldCollectedLabel" type="Label" parent="Control/BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold Collected:"
label_settings = SubResource("LabelSettings_6v25s")
vertical_alignment = 1

[node name="UnitsDefeatedLabel" type="Label" parent="Control/BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Units Defeated:"
label_settings = SubResource("LabelSettings_6v25s")
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../BottomPanel")
libraries = {
"": SubResource("AnimationLibrary_bh5hf")
}
autoplay = "default"
